Oct 25, 2012 - chris ---------------------------------------------------
o (win32) Now creating file with attribute FILE_ATTRIBUTE_NOT_CONTENT_INDEXED
    (thanks, Jake)

Sep 27, 2012 - chris ---------------------------------------------------
o issue #16: Fixed log file switching for temporary Transactions

Sep 25, 2012 - chris ---------------------------------------------------
o Fixed recovery process for temporary Transactions

Sep 10, 2012 - chris ---------------------------------------------------
o Added asynchronous flushes (see HAM_ENABLE_ASYNCHRONOUS_FLUSH)

Aug 30, 2012 - chris ---------------------------------------------------
o Removed HAM_PARAM_GET_STATISTICS; ham/hamsterdb_stats.h is no longer
    public, and the functions are no longer exported

Aug 27, 2012 - chris ---------------------------------------------------
o Renamed HAM_IN_MEMOR_DB to HAM_IN_MEMORY

Aug 12, 2012 - chris ---------------------------------------------------
o The internal C++ implementation was moved into namespace "ham" in order
        to avoid conflicts with other applications

Aug 01, 2012 - chris ---------------------------------------------------
o (dotnet) Fixed invalid memory access when using Parameter[] in
        env.CreateDatabase or env.OpenDatabase (Thanks, Jason)

Jul 23, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.4

Jul 21, 2012 - chris ---------------------------------------------------
o (java) Fixed race condition when closing Cursors (thanks, Mark S.)

Jul 20, 2012 - chris ---------------------------------------------------
o Fixed issue 8: Fixed data corruption when retrieving a record returns
    HAM_BLOB_NOT_FOUND (thanks, Artem)

Jul 18, 2012 - chris ---------------------------------------------------
o Fixed several bugs (mainly related to misplaced asserts) when performing
    recovery

Jul 10, 2012 - chris ---------------------------------------------------